dpest wheat ceres

--- a/examples/wheat/ceres/SWSW7501WH_N_RESPONSE.ipynb
+++ b/examples/wheat/ceres/SWSW7501WH_N_RESPONSE.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "dda8c82f-9600-4519-9577-b683085ec15c",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
     "# from dpestool import pst\n",
     "# from dpestool.wheat.utils import uplantgro\n",
     "\n",
-    "import dpestool"
+    "import dpest"
    ]
   },
   {
@@ -57,21 +57,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e262ed90-0483-4383-8a8e-db8660addf63",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Template file successfully created at: C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpestool.wheat.examples\\WHCER048_CUL.TPL\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Call the function\n",
-    "cultivar_parameters, cultivar_tpl_path = dpestool.wheat.ceres.cul(\n",
+    "cultivar_parameters, cultivar_tpl_path = dpest.wheat.ceres.cul(\n",
     "    P = 'P1V, P1D, P5', # Why the user should enter the parameters\n",
     "    G = 'G1, G2, G3', \n",
     "    PHINT = 'PHINT',\n",
@@ -90,20 +82,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8a7f48e9-de95-4388-906d-67933fa89394",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Template file successfully created at: C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpestool.wheat.examples\\WHCER048_ECO.TPL\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ecotype_parameters, ecotype_tpl_path = dpestool.wheat.ceres.eco(\n",
+    "ecotype_parameters, ecotype_tpl_path = dpest.wheat.ceres.eco(\n",
     "    PHEN = 'P1, P2FR1, P2, P3, P4FR1, P4FR2, P4',\n",
     "    VERN = 'VEFF',\n",
     "    ecotype = 'CAWH01',\n",
@@ -121,20 +105,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2ef0ad46-6d12-4b15-b657-46df88a4899a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OVERVIEW.INS file generated and saved to: C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpestool.wheat.examples\\OVERVIEW.ins\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "overview_observations,  overview_ins_path = dpestool.wheat.overview(\n",
+    "overview_observations,  overview_ins_path = dpest.wheat.overview(\n",
     "    treatment = '164.0 KG N/HA IRRIG',\n",
     "    overview_file_path = 'C:/DSSAT48/Wheat/OVERVIEW.OUT'\n",
     ")"
@@ -150,20 +126,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9e4e2d1c-ec50-47b4-94c4-e1f6ecae0d9f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PlantGro.INS file generated and saved to: C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpestool.wheat.examples\\PlantGro.ins\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "plantgro_observations, plantgro_ins_path = dpestool.wheat.plantgro(\n",
+    "plantgro_observations, plantgro_ins_path = dpest.wheat.plantgro(\n",
     "    plantgro_file_path = 'C:/DSSAT48/Wheat/PlantGro.OUT',\n",
     "    treatment = '164.0 KG N/HA IRRIG',\n",
     "    variables = ['LAID', 'CWAD', 'T#AD']\n",
@@ -181,21 +149,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "11c936ba-bdba-4d0f-baac-e9a14ff93772",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "noptmax:1000, npar_adj:15, nnz_obs:32\n",
-      "PST file successfully created: C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpestool.wheat.examples\\WHEAT_CERES_PEST_FILE.pst\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dpestool.pst(\n",
+    "dpest.pst(\n",
     "    cultivar_parameters = cultivar_parameters,\n",
     "    ecotype_parameters = ecotype_parameters,\n",
     "    dataframe_observations = [overview_observations, plantgro_observations],\n",
@@ -219,34 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "55043ea5-987d-4ba1-b91b-c9d1fb88a434",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PlantGro.OUT status: No update required.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import dpestool\n",
     "\n",
-    "dpestool.wheat.utils.uplantgro(\n",
+    "dpest.wheat.utils.uplantgro(\n",
     "    'C:/DSSAT48/Wheat/PlantGro.OUT', \n",
     "    '164.0 KG N/HA IRRIG', \n",
     "    ['LAID', 'CWAD', 'T#AD'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "394e0749-7e52-44d5-bf4e-11a61d5ee223",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
