--- a/test/wheat/ceres/SWSW7501WH_N_RESPONSE.ipynb
+++ b/test/wheat/ceres/SWSW7501WH_N_RESPONSE.ipynb
@@ -5,7 +5,12 @@
    "id": "07444e61-2064-4a30-9da9-402a897903af",
    "metadata": {},
    "source": [
-    "### Prerequisites for creating the PEST input files using the DSSAT Wheat CERES SWSW7501WH experiment:\n",
+    "### 1. Prerequisites for Using DPEST\n",
+    "\n",
+    "#### 1.1. Launching DSSAT and Setting Up the Experiment\n",
+    "\n",
+    "##### This example demonstrates how to use DPEST to create the necessary files for calibrating the CERES-Wheat model (DSSAT Version 4.8) using the SWSW7501WH N RESPONSE experiment.\n",
+    "\n",
     "1. Launch DSSAT.\n",
     "2. Click “Selector”.\n",
     "3. Expand “Crops” and select “Wheat”.\n",
@@ -25,7 +30,7 @@
    "id": "7b46e25d-4ed6-42b2-ace2-d747b4a8b6b9",
    "metadata": {},
    "source": [
-    "### Load the dpestool library or import each module"
+    "#### 1.2 Load the DPEST library or import each module"
    ]
   },
   {
@@ -50,7 +55,8 @@
    "id": "e7639def-6777-4cc2-b3e2-77d9e5b356a6",
    "metadata": {},
    "source": [
-    "### 1. Create CULTIVAR parameters TPL file "
+    "### 2. Instructions for Using DPEST Functions\n",
+    "#### 2.1. Creating CULTIVAR Parameters TPL File"
    ]
   },
   {
@@ -63,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Template file successfully created at: C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest.wheat.examples\\WHCER048_CUL.TPL\n",
+      "Template file successfully created at: C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest\\test\\wheat\\ceres\\WHCER048_CUL.TPL\n",
       "\n",
       "Cultivar parameters: {'parameters': {'P1D': '13.12', 'P5': '345.0', 'G1': '30.87', 'G2': '24.72', 'G3': '1.394', 'PHI': '102.3'}, 'minima_parameters': {'P1D': '0', 'P5': '100', 'G1': '10', 'G2': '10', 'G3': '0.5', 'PHI': '30'}, 'maxima_parameters': {'P1D': '200', 'P5': '999', 'G1': '50', 'G2': '80', 'G3': '8.0', 'PHI': '150'}, 'parameters_grouped': {'P': 'P1D, P5', 'G': 'G1, G2, G3', 'PHINT': 'PHI'}}\n"
      ]
@@ -88,7 +94,7 @@
    "id": "9f17f423-13c2-4049-b380-509075658337",
    "metadata": {},
    "source": [
-    "### 2. Create ECOTYPE parameters TPL file "
+    "#### 2.2. Creating ECOTYPE Parameters TPL File"
    ]
   },
   {
@@ -101,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Template file successfully created at: C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest.wheat.examples\\WHCER048_ECO.TPL\n",
+      "Template file successfully created at: C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest\\test\\wheat\\ceres\\WHCER048_ECO.TPL\n",
       "\n",
       "Ecotype_parameters: {'parameters': {'P1': '362', 'P2F': '.25', 'VEF': '0.5'}, 'minima_parameters': {'P1': '100', 'P2F': '0', 'VEF': '0.0'}, 'maxima_parameters': {'P1': '500', 'P2F': '.60', 'VEF': '1.0'}, 'parameters_grouped': {'PHEN': 'P1, P2F', 'VERN': 'VEF'}}\n"
      ]
@@ -125,7 +131,7 @@
    "id": "a15e8eab-9d7d-42f0-9a1e-8db2c5374dcc",
    "metadata": {},
    "source": [
-    "### 3. Create OVERVIEW observations INS file"
+    "#### 2.3. Creating OVERVIEW Observations INS File"
    ]
   },
   {
@@ -138,7 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OVERVIEW.INS file generated and saved to: C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest.wheat.examples\\OVERVIEW.ins\n",
+      "OVERVIEW.INS file generated and saved to: C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest\\test\\wheat\\ceres\\OVERVIEW.ins\n",
       "\n",
       "Overview observations:             variable_name  value_measured      group\n",
       "392          Anthesis_DAP          59.000  phenology\n",
@@ -194,7 +200,7 @@
    "id": "e9756cf9-9845-412f-92c5-791ded105257",
    "metadata": {},
    "source": [
-    "### 4. Create PlantGro observations INS file"
+    "#### 2.4. Creating PlantGro Observations INS File"
    ]
   },
   {
@@ -207,7 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PlantGro.INS file generated and saved to: C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest.wheat.examples\\PlantGro.ins\n",
+      "PlantGro.INS file generated and saved to: C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest\\test\\wheat\\ceres\\PlantGro.ins\n",
       "\n",
       "Plantgro observations:\n",
       "    variable_name  value_measured         group\n",
@@ -261,7 +267,7 @@
    "id": "096c8871-09e0-4be6-93fd-acba97337af4",
    "metadata": {},
    "source": [
-    "### 5. Create the PST file"
+    "#### 2.5. Creating the PST File"
    ]
   },
   {
@@ -275,7 +281,7 @@
      "output_type": "stream",
      "text": [
       "noptmax:1000, npar_adj:9, nnz_obs:32\n",
-      "PST file successfully created: C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest.wheat.examples\\PEST_CONTROL.pst\n",
+      "PST file successfully created: C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest\\test\\wheat\\ceres\\PEST_CONTROL.pst\n",
       "\n",
       "\n",
       " pcf\n",
@@ -351,10 +357,10 @@
       "* model command line\n",
       "py \"C:\\pest18\\run_dssat.py\"\n",
       "* model input/output\n",
-      "\"C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest.wheat.examples\\WHCER048_CUL.TPL\" C://DSSAT48/Genotype/WHCER048.CUL\n",
-      "\"C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest.wheat.examples\\WHCER048_ECO.TPL\" C://DSSAT48/Genotype/WHCER048.ECO\n",
-      "\"C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest.wheat.examples\\OVERVIEW.ins\" C://DSSAT48/Wheat/OVERVIEW.OUT\n",
-      "\"C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest.wheat.examples\\PlantGro.ins\" C://DSSAT48/Wheat/PlantGro.OUT\n",
+      "\"C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest\\test\\wheat\\ceres\\WHCER048_CUL.TPL\" C://DSSAT48/Genotype/WHCER048.CUL\n",
+      "\"C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest\\test\\wheat\\ceres\\WHCER048_ECO.TPL\" C://DSSAT48/Genotype/WHCER048.ECO\n",
+      "\"C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest\\test\\wheat\\ceres\\OVERVIEW.ins\" C://DSSAT48/Wheat/OVERVIEW.OUT\n",
+      "\"C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest\\test\\wheat\\ceres\\PlantGro.ins\" C://DSSAT48/Wheat/PlantGro.OUT\n",
       "\n"
      ]
     }
@@ -385,7 +391,7 @@
    "id": "895bb558-07f3-4541-8d00-bd0ac0dada73",
    "metadata": {},
    "source": [
-    "### 6. Function to add rows to the PlantGro file"
+    "#### 2.6. Using the uplantgro() function"
    ]
   },
   {
@@ -411,9 +417,258 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "972bba96-6a27-4499-9a77-5f94aa3251e8",
+   "metadata": {},
+   "source": [
+    "### 3.  Validate the Created PEST Input Files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dd6cdd21-5460-4f4b-bbb1-b869ee92750f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1984250d-fef8-4b72-9d2d-59c872e48a23",
+   "metadata": {},
+   "source": [
+    "#### 3.1. Validate that the files created exist in the directory "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9c47442f-c123-4db8-8f97-6f6f361c0740",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive C is OS\n",
+      " Volume Serial Number is BC56-CF07\n",
+      "\n",
+      " Directory of C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest\\test\\wheat\\ceres\n",
+      "\n",
+      "03/22/2025  11:02 PM    <DIR>          .\n",
+      "03/21/2025  10:07 PM    <DIR>          ..\n",
+      "03/22/2025  11:02 PM    <DIR>          .ipynb_checkpoints\n",
+      "03/22/2025  11:02 PM               929 OVERVIEW.ins\n",
+      "03/22/2025  11:02 PM             7,100 PEST_CONTROL.pst\n",
+      "03/22/2025  11:02 PM               833 PlantGro.ins\n",
+      "03/22/2025  11:01 PM            27,857 SWSW7501WH_N_RESPONSE.ipynb\n",
+      "03/22/2025  11:02 PM             4,186 WHCER048_CUL.TPL\n",
+      "03/22/2025  11:02 PM             5,882 WHCER048_ECO.TPL\n",
+      "               6 File(s)         46,787 bytes\n",
+      "               3 Dir(s)  40,082,223,104 bytes free\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = subprocess.run('dir', shell=True, check=True, capture_output=True, text=True)\n",
+    "print(result.stdout)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae549310-9dea-41d4-9187-b85a31538ab3",
+   "metadata": {},
+   "source": [
+    "#### 3.2. Validate the WHCER048_CUL.TPL File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6f49825c-3da7-463f-80a6-fb2417177f8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "TEMPCHEK Version 18.1. Watermark Numerical Computing.\n",
+      "\n",
+      "Errors in file WHCER048_CUL.TPL ----->\n",
+      "No errors encountered.\n",
+      "\n",
+      "6 parameters identified in file WHCER048_CUL.TPL: these are listed in file \n",
+      "  WHCER048_CUL.pmt.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = subprocess.run('tempchek.exe WHCER048_CUL.TPL', shell=True, check=True, capture_output=True, text=True)\n",
+    "print(result.stdout)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e59738a-da41-486e-8dcf-b487099ebf7e",
+   "metadata": {},
+   "source": [
+    "#### 3.3. Validate the WHCER048_ECO.TPL File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5d044d84-b5a4-46e3-a173-37ef9f5594ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "TEMPCHEK Version 18.1. Watermark Numerical Computing.\n",
+      "\n",
+      "Errors in file WHCER048_ECO.TPL ----->\n",
+      "No errors encountered.\n",
+      "\n",
+      "3 parameters identified in file WHCER048_ECO.TPL: these are listed in file \n",
+      "  WHCER048_ECO.pmt.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = subprocess.run('tempchek.exe WHCER048_ECO.TPL', shell=True, check=True, capture_output=True, text=True)\n",
+    "print(result.stdout)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b7e5ea5-7940-4abd-a042-7d9449f2e682",
+   "metadata": {},
+   "source": [
+    "#### 3.4. Validate the Overview Instruction File (.INS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7e63e712-0920-4783-9544-b8966a4d1340",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "INSCHEK Version 18.1. Watermark Numerical Computing.\n",
+      "\n",
+      "Errors in file OVERVIEW.ins ----->\n",
+      "No errors encountered.\n",
+      "\n",
+      "Reading model output file C://DSSAT48/Wheat/OVERVIEW.OUT ----->\n",
+      "No errors encountered.\n",
+      "\n",
+      "17 observations identified in file OVERVIEW.ins: these are listed in file \n",
+      "  OVERVIEW.obf together with their values as read from file \n",
+      "  C://DSSAT48/Wheat/OVERVIEW.OUT.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = subprocess.run('inschek.exe OVERVIEW.ins C://DSSAT48/Wheat/OVERVIEW.OUT', shell=True, check=True, capture_output=True, text=True)\n",
+    "print(result.stdout)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20068970-9387-47d7-9399-78ea8d06cf26",
+   "metadata": {},
+   "source": [
+    "#### 3.5. Validate the PlantGro Instruction File (.INS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "541901f2-0495-41d9-90ed-d14d4533b366",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "INSCHEK Version 18.1. Watermark Numerical Computing.\n",
+      "\n",
+      "Errors in file PlantGro.ins ----->\n",
+      "No errors encountered.\n",
+      "\n",
+      "Reading model output file C://DSSAT48/Wheat/PlantGro.OUT ----->\n",
+      "No errors encountered.\n",
+      "\n",
+      "15 observations identified in file PlantGro.ins: these are listed in file \n",
+      "  PlantGro.obf together with their values as read from file \n",
+      "  C://DSSAT48/Wheat/PlantGro.OUT.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = subprocess.run('inschek.exe PlantGro.ins C://DSSAT48/Wheat/PlantGro.OUT', shell=True, check=True, capture_output=True, text=True)\n",
+    "print(result.stdout)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c118c7b-80f7-4db5-97ed-ac3e8f576bb3",
+   "metadata": {},
+   "source": [
+    "#### 3.6. Validate the PEST Control File (.PST)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "edc8ed93-7e2e-4d18-9eb7-5d6ae87a48b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "PESTCHEK Version 18.1. Watermark Numerical Computing.\n",
+      "\n",
+      "Errors ----->\n",
+      "No errors encountered.\n",
+      "\n",
+      "Warnings ----->\n",
+      "No warnings.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = subprocess.run('pestchek.exe PEST_CONTROL.pst', shell=True, check=True, capture_output=True, text=True)\n",
+    "print(result.stdout)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd6cdd21-5460-4f4b-bbb1-b869ee92750f",
+   "id": "d970c7a6-6052-4f41-9f1f-def358343f54",
    "metadata": {},
    "outputs": [],
    "source": []
