--- a/examples/wheat/ceres/usage_example.ipynb
+++ b/examples/wheat/ceres/usage_example.ipynb
@@ -423,10 +423,10 @@
       "* model command line\n",
       "py \"C:\\pest18\\run_dssat.py\"\n",
       "* model input/output\n",
-      "\"C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest\\examples\\wheat\\ceres\\WHCER048_CUL.TPL\" ./DSSAT48_data/Genotype/WHCER048.CUL\n",
-      "\"C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest\\examples\\wheat\\ceres\\WHCER048_ECO.TPL\" ./DSSAT48_data/Genotype/WHCER048.ECO\n",
-      "\"C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest\\examples\\wheat\\ceres\\OVERVIEW.ins\" ./DSSAT48_data/Wheat/OVERVIEW.OUT\n",
-      "\"C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest\\examples\\wheat\\ceres\\PlantGro.ins\" ./DSSAT48_data/Wheat/PlantGro.OUT\n",
+      "WHCER048_CUL.TPL ./DSSAT48_data/Genotype/WHCER048.CUL\n",
+      "WHCER048_ECO.TPL ./DSSAT48_data/Genotype/WHCER048.ECO\n",
+      "OVERVIEW.ins ./DSSAT48_data/Wheat/OVERVIEW.OUT\n",
+      "PlantGro.ins ./DSSAT48_data/Wheat/PlantGro.OUT\n",
       "\n"
      ]
     }
@@ -439,10 +439,10 @@
     "    dataframe_observations = [overview_observations, plantgro_observations],\n",
     "    model_comand_line = r'py \"C:\\pest18\\run_dssat.py\"',\n",
     "    input_output_file_pairs = [\n",
-    "        (cultivar_tpl_path, './DSSAT48_data/Genotype/WHCER048.CUL'),\n",
-    "        (ecotype_tpl_path, './DSSAT48_data/Genotype/WHCER048.ECO'),\n",
-    "        (overview_ins_path , './DSSAT48_data/Wheat/OVERVIEW.OUT'),\n",
-    "        (plantgro_ins_path , './DSSAT48_data/Wheat/PlantGro.OUT')\n",
+    "        ('WHCER048_CUL.TPL', './DSSAT48_data/Genotype/WHCER048.CUL'),\n",
+    "        ('WHCER048_ECO.TPL', './DSSAT48_data/Genotype/WHCER048.ECO'),\n",
+    "        ('OVERVIEW.ins', './DSSAT48_data/Wheat/OVERVIEW.OUT'),\n",
+    "        ('PlantGro.ins', './DSSAT48_data/Wheat/PlantGro.OUT')\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -663,19 +663,23 @@
       "\n",
       " Directory of C:\\Users\\luizv\\OneDrive_Purdue\\OneDrive - purdue.edu\\Thesis\\dpest\\examples\\wheat\\ceres\n",
       "\n",
-      "05/18/2025  07:04 PM    <DIR>          .\n",
+      "06/11/2025  04:54 PM    <DIR>          .\n",
       "03/21/2025  10:07 PM    <DIR>          ..\n",
       "05/18/2025  07:04 PM    <DIR>          .ipynb_checkpoints\n",
       "04/27/2025  08:44 PM    <DIR>          DSSAT48_data\n",
-      "05/18/2025  07:04 PM               929 OVERVIEW.ins\n",
-      "05/18/2025  07:05 PM             6,463 PEST_CONTROL.pst\n",
-      "05/18/2025  07:04 PM               833 PlantGro.ins\n",
-      "04/28/2025  04:19 PM            42,598 usage_example.ipynb\n",
+      "06/11/2025  04:48 PM               929 OVERVIEW.ins\n",
+      "05/18/2025  07:05 PM               680 OVERVIEW.obf\n",
+      "06/11/2025  04:53 PM             6,107 PEST_CONTROL.pst\n",
+      "06/11/2025  04:51 PM               833 PlantGro.ins\n",
+      "05/18/2025  07:05 PM               600 PlantGro.obf\n",
+      "06/11/2025  04:54 PM            38,537 usage_example.ipynb\n",
       "05/16/2025  06:24 PM            15,423 usage_example.py\n",
-      "05/18/2025  07:04 PM             2,716 WHCER048_CUL.TPL\n",
-      "05/18/2025  07:04 PM             5,882 WHCER048_ECO.TPL\n",
-      "               7 File(s)         74,844 bytes\n",
-      "               4 Dir(s)  73,277,652,992 bytes free\n",
+      "05/18/2025  07:05 PM                90 WHCER048_CUL.pmt\n",
+      "06/11/2025  04:47 PM             2,716 WHCER048_CUL.TPL\n",
+      "05/18/2025  07:05 PM                45 WHCER048_ECO.pmt\n",
+      "06/11/2025  04:48 PM             5,882 WHCER048_ECO.TPL\n",
+      "              11 File(s)         71,842 bytes\n",
+      "               4 Dir(s)  74,388,692,992 bytes free\n",
       "\n"
      ]
     }
@@ -884,14 +888,6 @@
     "\n",
     "After successfully validating the `PEST input files`, the final step is to run the calibration process."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21a5da3e-6c5c-4a1a-ac1f-7fa51df23f1f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
