Update rst files, relative paths

--- a/examples/wheat/ceres/usage_example.ipynb
+++ b/examples/wheat/ceres/usage_example.ipynb
@@ -46,24 +46,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c83619de-8da8-46cd-8231-0c81f68d27ba",
-   "metadata": {},
-   "source": [
-    "> **Note on the Provided DSSAT Files**\n",
-    ">\n",
-    "> The pre-generated DSSAT files included in this repository (such as `.CUL`, `.ECO`, and `.OUT` files) are intended **solely for constructing the PEST control (`.PST`) file and demonstrating how to use dpest**. These files are static snapshots from a specific DSSAT experiment and **do not change** during the calibration process.\n",
-    ">\n",
-    "> **For real calibration work:**  \n",
-    "> In an actual calibration scenario, you **must configure PEST to point to the real DSSAT installation paths**—the locations where DSSAT will generate updated `.CUL`, `.ECO`, and `.OUT` files each time it runs. This is essential because PEST needs to read the new output files produced for each parameter set to properly compare simulated values with observations and adjust parameters.\n",
-    ">\n",
-    "> **If you use only the static, pre-generated files:**  \n",
-    "> - The simulation values will always be the same (those in the static files).\n",
-    "> - PEST will not see any change in model outputs as it adjusts parameters.\n",
-    "> - The calibration will be invalid, as PEST will be comparing against unchanging outputs, resulting in meaningless results."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7b46e25d-4ed6-42b2-ace2-d747b4a8b6b9",
    "metadata": {},
    "source": [
@@ -307,9 +289,8 @@
     "> If you use a different method to run DSSAT (such as your own script, a batch file, or a direct executable call), you must:\n",
     ">\n",
     "> Ensure that DSSAT outputs are written to the correct directory referenced in your .pst file.\n",
-    "> Update the * model command line in the .pst file to match your actual execution command.\n",
+    "> Update the `* model command line` in the `.pst` file to match your actual execution command.\n",
     "> Double-check that the output files are being updated with each run, so PEST uses the latest results.\n",
-    "> For more on running DSSAT from the command line and managing outputs, see the DSSAT Power Users Guide.\n",
     ">\n",
     "> The run_dssat.py script is provided as a reference. Adapt it as needed for your own DSSAT installation and workflow.\n",
     "\n",
