Include notebook tests

--- a/examples/wheat/ceres/usage_example.ipynb
+++ b/examples/wheat/ceres/usage_example.ipynb
@@ -366,7 +366,7 @@
    "source": [
     "# Call the function\n",
     "dpest.wheat.utils.uplantgro(\n",
-    "    './DSSAT48_data/Wheat/PlantGro.OUT', \n",
+    "    './DSSAT48/Wheat/PlantGro.OUT', \n",
     "    '164.0 KG N/HA IRRIG', \n",
     "    ['LAID', 'CWAD', 'T#AD'])"
    ]
