Update DSSAT48 folder

--- a/examples/wheat/ceres/usage_example.ipynb
+++ b/examples/wheat/ceres/usage_example.ipynb
@@ -66,6 +66,8 @@
     "# from dpestool import pst\n",
     "# from dpestool.wheat.utils import uplantgro\n",
     "\n",
+    "import coverage\n",
+    "coverage.process_startup()\n",
     "import dpest "
    ]
   },
