Update DSSAT48 folder

--- a/examples/wheat/ceres/usage_example.ipynb
+++ b/examples/wheat/ceres/usage_example.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54e01293-0470-4452-a9f9-b52162d6fc24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import coverage\n",
+    "coverage.process_startup()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "07444e61-2064-4a30-9da9-402a897903af",
    "metadata": {},
@@ -66,8 +77,6 @@
     "# from dpestool import pst\n",
     "# from dpestool.wheat.utils import uplantgro\n",
     "\n",
-    "import coverage\n",
-    "coverage.process_startup()\n",
     "import dpest "
    ]
   },
@@ -507,7 +516,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6f49825c-3da7-463f-80a6-fb2417177f8d",
-   "metadata": {"tags": ["skip-in-ci"]},
+   "metadata": {
+    "tags": [
+     "skip-in-ci"
+    ]
+   },
    "outputs": [],
    "source": [
     "result = subprocess.run('tempchek.exe WHCER048_CUL.TPL', shell=True, check=True, capture_output=True, text=True)\n",
@@ -526,7 +539,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5d044d84-b5a4-46e3-a173-37ef9f5594ca",
-   "metadata": {"tags": ["skip-in-ci"]},
+   "metadata": {
+    "tags": [
+     "skip-in-ci"
+    ]
+   },
    "outputs": [],
    "source": [
     "result = subprocess.run('tempchek.exe WHCER048_ECO.TPL', shell=True, check=True, capture_output=True, text=True)\n",
@@ -545,7 +562,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7e63e712-0920-4783-9544-b8966a4d1340",
-   "metadata": {"tags": ["skip-in-ci"]},
+   "metadata": {
+    "tags": [
+     "skip-in-ci"
+    ]
+   },
    "outputs": [],
    "source": [
     "result = subprocess.run('inschek.exe OVERVIEW.ins ./DSSAT48/Wheat/OVERVIEW.OUT', shell=True, check=True, capture_output=True, text=True)\n",
@@ -564,7 +585,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "541901f2-0495-41d9-90ed-d14d4533b366",
-   "metadata": {"tags": ["skip-in-ci"]},
+   "metadata": {
+    "tags": [
+     "skip-in-ci"
+    ]
+   },
    "outputs": [],
    "source": [
     "result = subprocess.run('inschek.exe PlantGro.ins ./DSSAT48/Wheat/PlantGro.OUT', shell=True, check=True, capture_output=True, text=True)\n",
@@ -583,7 +608,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "edc8ed93-7e2e-4d18-9eb7-5d6ae87a48b7",
-   "metadata": {"tags": ["skip-in-ci"]},
+   "metadata": {
+    "tags": [
+     "skip-in-ci"
+    ]
+   },
    "outputs": [],
    "source": [
     "result = subprocess.run('pestchek.exe PEST_CONTROL.pst', shell=True, check=True, capture_output=True, text=True)\n",
